Add infra project while provisioning

--- a/helm/app-of-apps/values.yaml
+++ b/helm/app-of-apps/values.yaml
@@ -93,7 +93,7 @@ argocd-apps:
   ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/
   projects:
   - name: infra
-    namespace: argocd
+    namespace: argo
     finalizers:
     description: Infra Project
     sourceRepos:
