Add infra project while provisioning

--- a/helm/app-of-apps/values.yaml
+++ b/helm/app-of-apps/values.yaml
@@ -99,8 +99,8 @@ argocd-apps:
     sourceRepos:
     - '*'
     destinations:
-    - '*'
-
+    - namespace: '*'
+      server: https://kubernetes.default.svc
 
   # - name: guestbook
   #   namespace: argocd
