add more permissions to the infra project

--- a/helm/app-of-apps/values.yaml
+++ b/helm/app-of-apps/values.yaml
@@ -101,6 +101,10 @@ argocd-apps:
     destinations:
     - namespace: '*'
       server: https://kubernetes.default.svc
+    clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+
 
   # - name: guestbook
   #   namespace: argocd
