initia. workflow template

--- a/helm/workflow-components/Chart.yaml
+++ b/helm/workflow-components/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v2
 name: workflows
-description:  Initial chart to contain Argo workflows
+description:  Chart for maintaining argo workflow pipelines and triggers
 version: 0.1.0
