--- a/helm/argo/templates/argo-events/eventbus.yaml
+++ b/helm/argo/templates/argo-events/eventbus.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.argoEvents.enabled }}
 ## Should i provision it with argo or are these namespace scoped?
 apiVersion: argoproj.io/v1alpha1
 kind: EventBus
@@ -25,3 +26,4 @@ spec:
 #        storageClassName: standard
 #        accessMode: ReadWriteOnce
 #        volumeSize: 10Gi
+{{ end }}
