--- a/helm/argo/Chart.yaml
+++ b/helm/argo/Chart.yaml
@@ -17,3 +17,8 @@ dependencies:
     version: "2.4.x"
     repository: "https://argoproj.github.io/argo-helm"
     condition: argo-events.enabled
+
+  - name: argo-rollouts
+    version: "2.32.x"
+    repository: "https://argoproj.github.io/argo-helm"
+    condition: argo-rollouts.enabled
