--- a/helm/argo/values.yaml
+++ b/helm/argo/values.yaml
@@ -52,6 +52,7 @@ argo-rollouts:
       ingressClassName: "nginx"
       hosts:
         - argo-rollouts.local
+      pathType: ImplementationSpecific
       paths:
         - /*
 
