--- a/helm/argo/values.yaml
+++ b/helm/argo/values.yaml
@@ -2,80 +2,82 @@ argocd-apps:
   enabled: true
   fullnameOverride: argocd-apps
   applications:
-# Argo can manage argo itself, thanks to its stateless nature we always have backwards compatability with helm disaster recovery is to fix and run helm upgrade --install argo helm/argo -n argo
-  argo:
-    namespace: argo
-    project: infra
-    sources:
-     - repoURL: https://github.com/koorikla/argo-stack
-       path: helm/argo
-       targetRevision: main
-    destination:
-      server: https://kubernetes.default.svc
+    # Argo can manage argo itself, thanks to its stateless nature we always have backwards compatability with helm disaster recovery is to fix and run helm upgrade --install argo helm/argo -n argo
+    argo:
       namespace: argo
-    syncPolicy:
-      automated:
-        prune: true
-        selfHeal: true
+      project: infra
+      sources:
+      - repoURL: https://github.com/koorikla/argo-stack
+        path: helm/argo
+        targetRevision: main
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: argo
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
 
-  workflow-components:
-    namespace: argo
-    project: demo
-    sources:
-     - repoURL: https://github.com/koorikla/argo-stack
-       path: workflow-components
-       targetRevision: main
-       directory:
-        recurse: true
-    destination:
-      server: https://kubernetes.default.svc
+    workflow-components:
       namespace: argo
+      project: demo
+      sources:
+      - repoURL: https://github.com/koorikla/argo-stack
+        path: workflow-components
+        targetRevision: main
+        directory:
+          recurse: true
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: argo
 
-  rollout-demo:
-    namespace: argo
-    project: demo
-    sources:
-     - repoURL: https://github.com/koorikla/argo-stack
-       path: rollout-demo
-       targetRevision: main
-       directory:
-        recurse: true
-    destination:
-      server: https://kubernetes.default.svc
-      namespace: default
+    rollout-demo:
+      namespace: argo
+      project: demo
+      sources:
+      - repoURL: https://github.com/koorikla/argo-stack
+        path: rollout-demo
+        targetRevision: main
+        directory:
+          recurse: true
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: default
 
   projects:
-  infra:
-    namespace: argo
-    finalizers:
-    description: Infra Project
-    sourceRepos:
-    - '*'
-    destinations:
-    - namespace: '*'
-      server: https://kubernetes.default.svc
-    clusterResourceWhitelist:
-    - group: '*'
-      kind: '*'
+    infra:
+      namespace: argo
+      finalizers:
+      description: Infra Project
+      sourceRepos:
+      - '*'
+      destinations:
+      - namespace: '*'
+        server: https://kubernetes.default.svc
+      clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
 
-  demo:
-    namespace: argo
-    finalizers:
-    description: Infra Project
-    sourceRepos:
-    - '*'
-    destinations:
-    - namespace: '*'
-      server: https://kubernetes.default.svc
-    clusterResourceWhitelist:
-    - group: '*'
-      kind: '*'
+    demo:
+      namespace: argo
+      finalizers:
+      description: Infra Project
+      sourceRepos:
+      - '*'
+      destinations:
+      - namespace: '*'
+        server: https://kubernetes.default.svc
+      clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
 
 
 
 argo-cd:
   enabled: true
   fullnameOverride: argo-cd
+  global:
+    domain: argocd.local  
   server:
     ingress:
       enabled: true
@@ -84,8 +86,6 @@ argo-cd:
         alb.ingress.kubernetes.io/ssl-passthrough: "true"
         nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       ingressClassName: "nginx"
-      hosts:
-        - argocd.local
       https: false
 
 
