feat: add Crossplane demo

--- a/manifests/random-manifest.yaml
+++ b/manifests/random-manifest.yaml
@@ -22,3 +22,16 @@
 #         name: nginx
 #         resources: {}
 # status: {}
+
+
+# ---
+
+# apiVersion: s3.aws.upbound.io/v1beta1
+# kind: Bucket
+# metadata:
+#   labels:
+#     testing.upbound.io/example-name: crossplane-bucket
+#   name: demo-crossplane-bucket
+# spec:
+#   forProvider:
+#     region: eu-central-1
