--- a/helm/crossplane/values.yaml
+++ b/helm/crossplane/values.yaml
@@ -1,1 +1,9 @@
-# placeholder
+crossplane:
+  function:
+    packages:
+      - xpkg.upbound.io/upbound/function-go-templating:v0.9.0
+
+  provider:
+    packages:
+      - xpkg.upbound.io/upbound/provider-family-aws:v1.20.0
+      - xpkg.upbound.io/upbound/provider-aws-s3
