--- a/helm/kargo/Chart.yaml
+++ b/helm/kargo/Chart.yaml
@@ -5,7 +5,7 @@ version: 0.1.0
 dependencies:
   - name: kargo
     version: "1.*.*"
-    repository: "oci://ghcr.io/akuity/kargo-charts/kargo"
+    repository: "oci://ghcr.io/akuity/kargo-charts"
   - name: cert-manager
     version: "1.*.*"
     repository: "https://charts.jetstack.io"
