fix: disable kargo tls

--- a/helm/kargo/values.yaml
+++ b/helm/kargo/values.yaml
@@ -1,6 +1,8 @@
 kargo:
   api:
     host: kargo.local
+    tls:
+      enabled: false
     ingress:
       enabled: true
       ingressClassName: nginx
