--- a/helm/crossplane/templates/providerconfig.yaml
+++ b/helm/crossplane/templates/providerconfig.yaml
@@ -2,6 +2,7 @@ apiVersion: aws.m.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
+  namespace: default
 spec:
   credentials:
     source: Secret
