--- a/helm/argo/values.yaml
+++ b/helm/argo/values.yaml
@@ -143,7 +143,7 @@ argo-cd:
       enabled: true
       annotations:
         nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+        # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       # ingressClassName: "nginx"
       https: false
 
